--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,22 @@
     -webkit-appearance: none;
     margin: 0;
   }
+
+  .loader {
+    width: 25px;
+    height: 25px;
+    border: 4px solid #FFF;
+    border-bottom-color: transparent;  
+    border-radius: 50%;
+    box-sizing: border-box;
+    animation: rotation 1.5s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
